--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.1
+  sqflite: ^2.2.3
+  path_provider: ^2.1.3
   flutter_secure_storage: ^9.1.1
+  connectivity_plus: ^3.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
