--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   path_provider: ^2.1.3
   flutter_secure_storage: ^9.1.1
   connectivity_plus: ^3.0.3
+  provider: ^6.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
